made changes for creating a contact barcode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QRGenerator</string>
+    <string name="app_name">FORK_QRGenerator</string>
     <string name="save">Save</string>
     <string name="generate">Generate</string>
     <string name="enter_text">Enter Text</string>
